--- a/index.html
+++ b/index.html
@@ -4803,7 +4803,7 @@
 </tr>
 <tr>
 <td align="center">May 2020</td>
-<td>R Markdown</td>
+<td><a href="./PDF/LU-May-Markdown-workshop-programme.pdf">R Markdown</a></td>
 <td>Lancaster University	[online]</td>
 <td align="center"></td>
 </tr>
