--- a/talk/index.html
+++ b/talk/index.html
@@ -634,7 +634,7 @@
 
     
     <div class="article-style">
-      Abstract Linear mixed-effects models (LMEMs) are used to account for variation within factors with multiple observations, such as …
+      Slides    Abstract Linear mixed-effects models (LMEMs) are used to account for variation within factors with multiple observations, …
     </div>
     
 
