--- a/index.html
+++ b/index.html
@@ -3704,7 +3704,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="./2021/brief-clarifications-open-questions-commentary-on-liu-et-al-2018/" >Brief Clarifications | Open Questions</a>
+      <a href="./2021/brief-clarifications-open-questions-commentary-on-liu-et-al-2018/" >Brief Clarifications, Open Questions: Commentary on Liu et al. (2018)</a>
     </h3>
 
     
