--- a/applications-and-dashboards/experimental-data-simulation/index.html
+++ b/applications-and-dashboards/experimental-data-simulation/index.html
@@ -740,8 +740,6 @@
 
     <div class="article-style">
       
-<link href="../../applications-and-dashboards/experimental-data-simulation/index.en_files/anchor-sections/anchor-sections.css" rel="stylesheet" />
-<script src="../../applications-and-dashboards/experimental-data-simulation/index.en_files/anchor-sections/anchor-sections.js"></script>
 
 
 <div style="font-size: 25px; color: #614064; padding-top: 15px; padding-bottom: 10px;">
@@ -768,7 +766,7 @@ Screenshot of the <em>Dependent</em> tab (<a href="https://github.com/pabloberna
 </div>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
-<p>Bernabeu, P., &amp; Lynott, D. (2020). <em>Web application for the simulation of experimental data</em> (Version 1.2). <a href="https://github.com/pablobernabeu/Experiment-simulation-app/">https://github.com/pablobernabeu/Experiment-simulation-app/</a></p>
+<p>Bernabeu, P., &amp; Lynott, D. (2020). <em>Web application for the simulation of experimental data</em> (Version 1.4). <a href="https://github.com/pablobernabeu/Experiment-simulation-app/">https://github.com/pablobernabeu/Experiment-simulation-app/</a></p>
 </div>
 <div id="code" class="section level3">
 <h3>Code</h3>
@@ -779,7 +777,7 @@ Screenshot of the <em>Dependent</em> tab (<a href="https://github.com/pabloberna
 <div id="option-a-using-local-rrstudio-or-rstudio-cloud-project-or-binder-rstudio-environment" class="section level4">
 <h4>Option A) Using local R/RStudio or <a href="https://rstudio.cloud/project/1739958">RStudio Cloud project</a> or <a href="https://mybinder.org/v2/gh/pablobernabeu/Experimental-data-simulation/master?urlpath=rstudio">Binder RStudio environment</a></h4>
 <ol style="list-style-type: decimal">
-<li><p>[Step only necessary in R/RStudio Cloud] Install the packages in the versions used in the <a href="https://github.com/pablobernabeu/Experimental-data-simulation/releases">latest release of this application</a>, by running:</p>
+<li><p>[Step only necessary in R/RStudio] Install the packages in the versions used in the <a href="https://github.com/pablobernabeu/Experimental-data-simulation/releases">latest release of this application</a>, by running:</p>
 <pre><code>install.packages(&#39;devtools&#39;)
 library(devtools)
 install_version(&#39;dplyr&#39;, &#39;1.0.2&#39;, &#39;http://cran.us.r-project.org&#39;)
