--- a/index.html
+++ b/index.html
@@ -4771,7 +4771,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>As a graduate teaching assistant (GTA) during my PhD, I have contributed to seminars, labs, marking, invigilation and GTAs&rsquo; representation, for a total of 180 hours per year.</p>
+      <p>As a graduate teaching assistant (GTA) during my PhD, I have contributed to seminars, statistics labs, essay marking, and GTAs&rsquo; representation, for 180 hours per year.</p>
 <table>
 <thead>
 <tr>
