--- a/applications-and-dashboards/butterfly-species-richness-in-la/index.html
+++ b/applications-and-dashboards/butterfly-species-richness-in-la/index.html
@@ -874,7 +874,7 @@ Column {style=&quot;data-width:100%; position:static; height:1000px;&quot;}
       
     
     <li>
-      <a href="http://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu" target="_blank" rel="noopener">
+      <a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu%285add90d6-f60f-4a88-91fc-b2e756579109%29.html" target="_blank" rel="noopener">
         <i class="fas fa-university"></i>
       </a>
     </li>
