--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@
 
     
     <div class="article-style">
-      VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from the Web Video Text …
+      VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from Web Video Text …
     </div>
     
 
