--- a/applications-and-dashboards/vtt-transcription-app/index.html
+++ b/applications-and-dashboards/vtt-transcription-app/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from the Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, the VTT file (with extension .txt or .vtt) is uploaded to the app. Automatically, metadata such as timestamps are removed, and the text is formatted. Files can be successively submitted and downloaded (as .docx and .txt). As such, this app can serve to make audiovisual content more accessible.">
+  <meta name="description" content="VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, users upload a VTT file with extension .vtt or .txt. Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as .docx and .txt documents. Overall, this application serves to improve the accessibility of subtitles.">
 
   
   <link rel="alternate" hreflang="en-uk" href="../../applications-and-dashboards/vtt-transcription-app/">
@@ -234,7 +234,7 @@
   <meta property="og:site_name" content="Pablo Bernabeu">
   <meta property="og:url" content="/applications-and-dashboards/vtt-transcription-app/">
   <meta property="og:title" content="VTT Transcription App | Pablo Bernabeu">
-  <meta property="og:description" content="VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from the Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, the VTT file (with extension .txt or .vtt) is uploaded to the app. Automatically, metadata such as timestamps are removed, and the text is formatted. Files can be successively submitted and downloaded (as .docx and .txt). As such, this app can serve to make audiovisual content more accessible."><meta property="og:image" content="/img/pablobernabeu_image_sharing.png">
+  <meta property="og:description" content="VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, users upload a VTT file with extension .vtt or .txt. Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as .docx and .txt documents. Overall, this application serves to improve the accessibility of subtitles."><meta property="og:image" content="/img/pablobernabeu_image_sharing.png">
   <meta property="twitter:image" content="/img/pablobernabeu_image_sharing.png"><meta property="og:locale" content="en-uk">
   
     
@@ -725,7 +725,7 @@
 
 <div id="vtt-transcription-app" class="section level1">
 <h1>VTT Transcription App</h1>
-<p><strong>VTT Transcription App</strong> is an open-source, R-based web application that allows the conversion of subtitle files from <a href="https://www.w3.org/TR/webvtt1/">Web Video Text Tracks (WebVTT) Format</a> into plain texts. For this purpose, users upload a VTT file with extension <code>.vtt</code> or <code>.txt</code>. Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as <code>.docx</code> and <code>.txt</code> documents. Overall, this application serves to improve the accessibility of subtitles.</p>
+<p><strong>VTT Transcription App</strong> is an open-source, R-based web application that allows the conversion of subtitle files from <a href="https://www.w3.org/TR/webvtt1/">Web Video Text Tracks (WebVTT) Format</a> into plain texts. For this purpose, users upload a VTT file with the extension <code>.vtt</code> or <code>.txt</code> (examples available <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_1.vtt">here</a> and <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_2.txt">here</a>). Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as <code>.docx</code> and <code>.txt</code> documents. Overall, this application serves to improve the accessibility of subtitles.</p>
 <div id="globe_with_meridians-the-web-application-can-be-launched-here-or-here" class="section level2">
 <h2>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App/">launched here</a> or <a href="https://mybinder.org/v2/gh/pablobernabeu/VTT-Transcription-App/HEAD?urlpath=shiny">here</a></h2>
 <p>The data is only available to the user, and is deleted when the website is closed.</p>
