--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="./categories/conceptual-processing-individual-differences-psycholinguistics/">conceptual processing, individual differences, psycholinguistics</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="./categories/conceptual-processing/">conceptual processing</a>, <a href="./categories/individual-differences/">individual differences</a>, <a href="./categories/psycholinguistics/">psycholinguistics</a></span>
   
 
 </div>
@@ -4902,7 +4902,7 @@
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td>Statistics for psychologists I and II (121 and 122) — Labs</td>
+<td>Statistics for psychologists I and II (121 and 122) using R — Labs</td>
 </tr>
 <tr>
 <td style="text-align:center"><strong>2019–20</strong></td>
@@ -4914,7 +4914,7 @@
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td>Master&rsquo;s statistics (401) — Labs</td>
+<td>Master&rsquo;s statistics (401) using R — Labs</td>
 </tr>
 <tr>
 <td style="text-align:center"><strong>2018–19</strong></td>
@@ -4922,7 +4922,7 @@
 </tr>
 <tr>
 <td style="text-align:center"></td>
-<td>Investigating psychology: Analysis (102) — Labs</td>
+<td>Investigating psychology: Analysis (102) using SPSS — Labs</td>
 </tr>
 </tbody>
 </table>
