--- a/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
+++ b/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
@@ -672,7 +672,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="../../categories/conceptual-processing-individual-differences-psycholinguistics/">conceptual processing, individual differences, psycholinguistics</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="../../categories/conceptual-processing/">conceptual processing</a>, <a href="../../categories/individual-differences/">individual differences</a>, <a href="../../categories/psycholinguistics/">psycholinguistics</a></span>
   
 
 </div>
