--- a/index.html
+++ b/index.html
@@ -2768,6 +2768,13 @@
 <td>Research Software Forum, Lancaster University</td>
 </tr>
 <tr>
+<td>Nov 2018</td>
+<td>Talk</td>
+<td>
+<a href="https://www.slideshare.net/PabloBernabeu/linguisticand-embodied-systemsin-conceptual-processingrole-of-individual-differences" target="_blank" rel="noopener">Linguistic and embodied systems in conceptual processing: Role of individual differences</a></td>
+<td>Psychology postgraduate medley, Lancaster University</td>
+</tr>
+<tr>
 <td>Jan 2017 x2, Apr 2017, July 2017, Nov 2017</td>
 <td>Poster</td>
 <td>
