--- a/index.html
+++ b/index.html
@@ -5098,7 +5098,7 @@
 <td>
 <a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS Grant</a>, University of Melbourne</td>
 <td>Awarded for completing 20 
-<a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS research assessments</a>, and used in PhD research</td>
+<a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS research assessments</a>, and used in PhD research.</td>
 </tr>
 <tr>
 <td>2020</td>
@@ -5118,14 +5118,14 @@
 <td>2017</td>
 <td>
 <a href="https://www.psychonomic.org/page/2017GraduateTravelRecipients" target="_blank" rel="noopener">Psychonomic Society Graduate Travel Award for 58th Annual Meeting</a></td>
-<td>Presenting a research poster on 
+<td>Presenting a poster on 
 <a href="https://cogsci.mindmodeling.org/2017/papers/0318/index.html" target="_blank" rel="noopener">research from my master&rsquo;s</a>.</td>
 </tr>
 <tr>
 <td>2017</td>
 <td>
 <a href="https://eps.ac.uk/grindley-grant/" target="_blank" rel="noopener">Experimental Psychology Society Grindley Grant</a></td>
-<td>Presenting a research poster on 
+<td>Presenting a poster on 
 <a href="https://cogsci.mindmodeling.org/2017/papers/0318/index.html" target="_blank" rel="noopener">research from my master&rsquo;s</a> at conference 
 <a href="http://eventcognition.org/event_memory_workshop/" target="_blank" rel="noopener">&lsquo;Event representations in episodic and semantic memory&rsquo;</a>.</td>
 </tr>
@@ -5133,7 +5133,7 @@
 <td>2017</td>
 <td>
 <a href="https://eps.ac.uk/grindley-grant/" target="_blank" rel="noopener">Experimental Psychology Society Grindley Grant</a></td>
-<td>Presenting a research poster on 
+<td>Presenting a poster on 
 <a href="https://cogsci.mindmodeling.org/2017/papers/0318/index.html" target="_blank" rel="noopener">research from my master&rsquo;s</a> at 
 <a href="https://cogsci.mindmodeling.org/2017/" target="_blank" rel="noopener">Cognitive Society conference</a>.</td>
 </tr>
@@ -5141,7 +5141,7 @@
 <td>2017</td>
 <td>
 <a href="https://mindmodeling.org/cogsci2017/" target="_blank" rel="noopener">Student Volunteer, Cognitive Science Society Conference</a></td>
-<td>Presenting a research poster on 
+<td>Presenting a poster on 
 <a href="https://cogsci.mindmodeling.org/2017/papers/0318/index.html" target="_blank" rel="noopener">research from my master&rsquo;s</a>.</td>
 </tr>
 <tr>
