--- a/applications-and-dashboards/vtt-transcription-app/index.html
+++ b/applications-and-dashboards/vtt-transcription-app/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, users upload a VTT file with extension .vtt or .txt. Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as .docx and .txt documents. Overall, this application serves to improve the accessibility of subtitles.">
+  <meta name="description" content="This open-source, R-based web application allows the conversion of video captions (subtitles) from the Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, users upload a WebVTT file with the extension of &#39;vtt&#39; or &#39;txt&#39;. Automatically, metadata such as timestamps are removed, and the text is formatted.">
 
   
   <link rel="alternate" hreflang="en-uk" href="../../applications-and-dashboards/vtt-transcription-app/">
@@ -233,8 +233,8 @@
   
   <meta property="og:site_name" content="Pablo Bernabeu">
   <meta property="og:url" content="/applications-and-dashboards/vtt-transcription-app/">
-  <meta property="og:title" content="VTT Transcription App | Pablo Bernabeu">
-  <meta property="og:description" content="VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, users upload a VTT file with extension .vtt or .txt. Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as .docx and .txt documents. Overall, this application serves to improve the accessibility of subtitles."><meta property="og:image" content="/img/pablobernabeu_image_sharing.png">
+  <meta property="og:title" content="WebVTT caption transcription app | Pablo Bernabeu">
+  <meta property="og:description" content="This open-source, R-based web application allows the conversion of video captions (subtitles) from the Web Video Text Tracks (WebVTT) Format into plain texts. For this purpose, users upload a WebVTT file with the extension of &#39;vtt&#39; or &#39;txt&#39;. Automatically, metadata such as timestamps are removed, and the text is formatted."><meta property="og:image" content="/img/pablobernabeu_image_sharing.png">
   <meta property="twitter:image" content="/img/pablobernabeu_image_sharing.png"><meta property="og:locale" content="en-uk">
   
     
@@ -259,7 +259,7 @@
 
 
 
-  <title>VTT Transcription App | Pablo Bernabeu</title>
+  <title>WebVTT caption transcription app | Pablo Bernabeu</title>
 
 </head>
 
@@ -583,7 +583,7 @@
   
   
 <div class="article-container pt-3">
-  <h1>VTT Transcription App</h1>
+  <h1>WebVTT caption transcription app</h1>
 
   
 
@@ -723,9 +723,7 @@
 <script src="../../applications-and-dashboards/vtt-transcription-app/index.en_files/header-attrs/header-attrs.js"></script>
 
 
-<div id="vtt-transcription-app" class="section level1">
-<h1>VTT Transcription App</h1>
-<p><strong>VTT Transcription App</strong> is an open-source, R-based web application that allows the conversion of subtitle files from <a href="https://www.w3.org/TR/webvtt1/">Web Video Text Tracks (WebVTT) Format</a> into plain texts. For this purpose, users upload a VTT file with the extension <code>.vtt</code> or <code>.txt</code> (examples available <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_1.vtt">here</a> and <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_2.txt">here</a>). Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as <code>.docx</code> and <code>.txt</code> documents. Overall, this application serves to improve the accessibility of subtitles.</p>
+<p>This open-source, R-based web application allows the conversion of video captions (subtitles) from the <a href="https://www.w3.org/TR/webvtt1/">Web Video Text Tracks (WebVTT) Format</a> into plain texts. For this purpose, users upload a WebVTT file with the extension <code>.vtt</code> or <code>.txt</code> (examples available <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_1.vtt">here</a> and <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_2.txt">here</a>). Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as <code>.docx</code> and <code>.txt</code> documents. Overall, this application serves to improve the accessibility of video captions.</p>
 <div id="globe_with_meridians-the-web-application-can-be-launched-here-or-here" class="section level2">
 <h2>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App/">launched here</a> or <a href="https://mybinder.org/v2/gh/pablobernabeu/VTT-Transcription-App/HEAD?urlpath=shiny">here</a></h2>
 <p>The data is only available to the user, and is deleted when the website is closed.</p>
@@ -736,7 +734,6 @@
 <h2>Code details</h2>
 <p>The core of the application is in the <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/index.Rmd">index.Rmd</a> script, which uses ‘<a href="https://stringr.tidyverse.org/articles/regular-expressions.html">regular expressions</a>’ to process the VTT file. In turn, that script draws on <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/VTT-Transcription-App_doc_renderer.Rmd">another one</a> to enable the download of <code>.docx</code> documents. Last, the latter script in turn uses a <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/VTT-Transcription-App-format-template.docx">Word template</a>.</p>
 <p><br></p>
-</div>
 </div>
 
     </div>
