--- a/index.html
+++ b/index.html
@@ -2145,12 +2145,12 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="./applications-and-dashboards/vtt-transcription-app/" >VTT Transcription App</a>
+      <a href="./applications-and-dashboards/vtt-transcription-app/" >WebVTT caption transcription app</a>
     </h3>
 
     
     <div class="article-style">
-      VTT Transcription App is an open-source, R-based web application that allows the conversion of subtitle files from Web Video Text …
+      This open-source, R-based web application allows the conversion of video captions (subtitles) from the Web Video Text Tracks (WebVTT) …
     </div>
     
 
