--- a/index.html
+++ b/index.html
@@ -3633,7 +3633,7 @@
 
     
     <div class="article-style">
-      Event-related potentials (ERPs) offer a unique insight in the study of human cognition. Let’s look at their reason-to-be for the …
+      Event-related potentials (ERPs) offer a unique insight in the study of human cognition. Let&rsquo;s look at their reason-to-be for the …
     </div>
     
 
