--- a/talk/towards-reproducibility-and-maximally-open-data/index.html
+++ b/talk/towards-reproducibility-and-maximally-open-data/index.html
@@ -28,8 +28,7 @@
   
     
   
-  <meta name="description" content="
- Video below the slides  Slideshare Embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A&#43;OSCG&#43;Open&#43;Scholarship&#43;Prize&#43;-&#43;The&#43;Final!/1_d7ekd3d3/121659351#t=56:08.
+  <meta name="description" content=" Video below the slides  Slideshare Video embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A&#43;OSCG&#43;Open&#43;Scholarship&#43;Prize&#43;-&#43;The&#43;Final!/1_d7ekd3d3/121659351#t=56:08.
  ">
 
   
@@ -236,8 +235,7 @@
   <meta property="og:site_name" content="Pablo Bernabeu">
   <meta property="og:url" content="/talk/towards-reproducibility-and-maximally-open-data/">
   <meta property="og:title" content="Towards reproducibility and maximally-open data | Pablo Bernabeu">
-  <meta property="og:description" content="
- Video below the slides  Slideshare Embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A&#43;OSCG&#43;Open&#43;Scholarship&#43;Prize&#43;-&#43;The&#43;Final!/1_d7ekd3d3/121659351#t=56:08.
+  <meta property="og:description" content=" Video below the slides  Slideshare Video embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A&#43;OSCG&#43;Open&#43;Scholarship&#43;Prize&#43;-&#43;The&#43;Final!/1_d7ekd3d3/121659351#t=56:08.
  "><meta property="og:image" content="/img/pablobernabeu_image_sharing.png">
   <meta property="twitter:image" content="/img/pablobernabeu_image_sharing.png"><meta property="og:locale" content="en-uk">
   
@@ -276,7 +274,7 @@
     "name": "Pablo Bernabeu"
   },
   
-  "description": "\n Video below the slides  Slideshare Embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A+OSCG+Open+Scholarship+Prize+-+The+Final!/1_d7ekd3d3/121659351#t=56:08.\n "
+  "description": " Video below the slides  Slideshare Video embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A+OSCG+Open+Scholarship+Prize+-+The+Final!/1_d7ekd3d3/121659351#t=56:08.\n "
 }
 </script>
 
@@ -709,12 +707,11 @@
     
 
     <div class="article-style">
-      <br>
-<h3 id="i-stylefont-weightbold-color5b6574-classfas-fa-arrow-down-fa-xsi-video-below-the-slides"><i style="font-weight:bold; color:#5B6574" class="fas fa-arrow-down fa-xs"></i> Video below the slides</h3>
+      <h3 id="i-stylefont-weightbold-color5b6574-classfas-fa-arrow-down-fa-xsi-video-below-the-slides"><i style="font-weight:bold; color:#5B6574" class="fas fa-arrow-down fa-xs"></i> Video below the slides</h3>
 <br>
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/qXQn84BXVwvCVg" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <a href="//www.slideshare.net/PabloBernabeu/towards-reproducibility-and-maximallyopen-data" title="Towards reproducibility and maximally-open data" target="_blank">Slideshare</a></div>
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/2zoozgIMfAMutu" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <a href="//www.slideshare.net/PabloBernabeu/towards-reproducibility-and-maximallyopen-data-248372286" title="Towards reproducibility and maximally-open data" target="_blank">Slideshare</a></div>
 <br>
-<p style='font-size:80%;'>Embedded from: https://nuigalway.mediaspace.kaltura.com/media/OSW2021A+OSCG+Open+Scholarship+Prize+-+The+Final!/1_d7ekd3d3/121659351#t=56:08.</p>
+<p style='font-size:80%;'>Video embedded from: <a href='https://nuigalway.mediaspace.kaltura.com/media/OSW2021A+OSCG+Open+Scholarship+Prize+-+The+Final!/1_d7ekd3d3/121659351#t=56:08'>https://nuigalway.mediaspace.kaltura.com/media/OSW2021A+OSCG+Open+Scholarship+Prize+-+The+Final!/1_d7ekd3d3/121659351#t=56:08</a>.</p>
 <iframe src="https://cdnapisec.kaltura.com/p/723092/sp/72309200/embedIframeJs/uiconf_id/31568551/partner_id/723092?flashvars[mediaProxy.mediaPlayFrom]=3368&iframeembed=true&playerId=kplayer&entry_id=1_d7ekd3d3&flashvars[streamerType]=auto" width="700" height="700" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
 
     </div>
@@ -730,6 +727,8 @@
   <a class="badge badge-light" href="../../tags/open-scholarship/">open scholarship</a>
   
   <a class="badge badge-light" href="../../tags/open-data/">open data</a>
+  
+  <a class="badge badge-light" href="../../tags/reproducibility/">reproducibility</a>
   
 </div>
 
