--- a/index.html
+++ b/index.html
@@ -5067,7 +5067,7 @@
 <a href="https://eps.ac.uk/grindley-grant/" target="_blank" rel="noopener">Experimental Psychology Society Grindley Grant</a></td>
 <td>Presenting a poster on 
 <a href="https://cogsci.mindmodeling.org/2017/papers/0318/index.html" target="_blank" rel="noopener">research from my master&rsquo;s</a> at 
-<a href="https://cogsci.mindmodeling.org/2017/" target="_blank" rel="noopener">Cognitive Society conference</a>.</td>
+<a href="https://cogsci.mindmodeling.org/2017/" target="_blank" rel="noopener">Cognitive Science Society Conference</a>.</td>
 </tr>
 <tr>
 <td>2017</td>
