--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
@@ -122,7 +122,7 @@ text-shadow: none;
 --
 
 - What semantic memory systems should be considered? 
-&lt;br&gt;(e.g.,Bernabeu et al., 2021)
+&lt;br&gt;(e.g., Bernabeu et al., 2021)
 
 --
 
@@ -245,11 +245,13 @@ Role and interplay of the linguistic and perceptual systems.
 
 - Unique contribution of each variable of interest, and of some interactions among those variables. 
 
-- Participants and items crossed. Linear mixed-effects models used. 
+- Linear mixed-effects models
 
   - Maximal random effects structures. While convergence was facilitated, random slopes for the effects of interest were never removed (Brauer &amp; Curtin, 2018; Singmann &amp; Kellen, 2019). 
   
   - &lt;em&gt;P&lt;/em&gt; values calculated using the Kenward-Roger approximation for degrees of freedom (Luke, 2017).
+  
+- Used the High-End Computing facility at Lancaster University.
 
 
 ---
@@ -343,9 +345,9 @@ Following Brauer and Curtin (2018)
 
 ---
 
-# Higher-vocabulary participants...
+# Higher-vocabulary participants
 
-are less affected by the prime word--specifically, word association and visual-modality difference. This converges with Pexman and Yap's (2018) findings that higher- and lower-vocabulary participants are affected by different variables. Potentially, the variables affecting higher-vocabulary participants are more selective, that is, fewer and more relevant to the task.
+- less affected by the prime word--specifically, word association and visual-modality difference. This converges with Yap et al.'s (2017) finding that higher- and lower-vocabulary participants were affected by different variables. Potentially, the variables affecting higher-vocabulary participants are more selective, that is, fewer and more relevant to the task (also see Pexman & Yap, 2018).
 
 
 ---
@@ -465,6 +467,13 @@ Following Brauer and Curtin (2018)
 
 ---
 
+# As before, higher-vocabulary participants
+
+- less affected by the prime word--specifically, word association and visual-modality difference. This converges with Pexman and Yap's (2018) finding that higher- and lower-vocabulary participants were affected by different variables. Potentially, the variables affecting higher-vocabulary participants are more selective, that is, fewer and more relevant to the task (also see Yap et al., 2017).
+
+
+---
+
 ## Interaction: Vocabulary size by word frequency 
 
 &lt;img src="index_files/figure-html/unnamed-chunk-14-1.png" height="430px" style="display: block; margin: auto;" /&gt;
@@ -539,7 +548,7 @@ Monte Carlo simulations operate by running the statistical model specified a lar
 
 --
 
-- Required statistical power much larger than usual sample sizes.
+- Sample size suggested by power analysis much larger than usual samples in literature (also see Loken & Gelman, 2017).
 
 ---
 
