--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
@@ -251,7 +251,9 @@ Role and interplay of the linguistic and perceptual systems.
   
   - &lt;em&gt;P&lt;/em&gt; values calculated using the Kenward-Roger approximation for degrees of freedom (Luke, 2017).
   
-- Used the High-End Computing facility at Lancaster University.
+- All analyses in R
+
+  - High-End Computing facility at Lancaster University supporting computationally-expensive analyses (especially power curves).
 
 
 ---
