--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
@@ -253,8 +253,6 @@ Role and interplay of the linguistic and perceptual systems.
   
 - All analyses in R
 
-  - High-End Computing facility at Lancaster University supporting computationally-expensive analyses (especially power curves).
-
 
 ---
 
@@ -551,6 +549,13 @@ Monte Carlo simulations operate by running the statistical model specified a lar
 --
 
 - Sample size suggested by power analysis much larger than usual samples in literature (also see Loken & Gelman, 2017).
+
+--
+
+------
+
+- High-End Computing facility at Lancaster University hosted computationally-expensive analyses.
+
 
 ---
 
