--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
@@ -490,13 +490,15 @@ Following Brauer and Curtin (2018)
 
 ## Power analysis
 
-For another, forthcoming study, a prospective power analysis is being conducted using the results from the two present studies. Both these studies are apt for usage as pilots in a power analysis, as they encompass larger-than-average sample sizes (Albers &amp; Lakens, 2018; Loken &amp; Gelman, 2017). For each effect of interest, power curves based on Monte Carlo simulations are being performed, using the `simr` package in R. Preliminary results presented next (too few simulations).
+For another, forthcoming study, a prospective power analysis is being conducted using the results from the two present studies. Both these studies are apt for usage as pilots in a power analysis, as they encompass larger-than-average sample sizes (Albers &amp; Lakens, 2018; Loken &amp; Gelman, 2017). For each effect of interest, power curves based on Monte Carlo simulations are being performed, using the `simr` package in R.
 
 --
 
-### Monte Carlo simulations
-
 Monte Carlo simulations operate by running the statistical model specified a large number of times, under slight variations of the dependent variable. The power to detect each effect of interest is calculated by dividing the number of times that the effect was significant by the total number of iterations. For instance, if an effect is significant in 85 out of 100 simulations, the power for that effect is 85%. Importantly, it is reasonable to regard the results conservatively, due to potential bias in the published data sets (Loken & Gelman, 2017). *P* values were calculated using the Satterthwaite approximation for degrees of freedom (Luke, 2017). 
+
+--
+
+&lt;em&gt;Preliminary&lt;/em&gt; power for semantic decision study presented next (< 30 iterations instead of recommended 500).
 
 
 ---
@@ -582,14 +584,16 @@ Luke, S. G. (2017). Evaluating significance in linear mixed-effects models in R.
 
 Lynott, D., Connell, L., Brysbaert, M., Brand, J., &amp; Carney, J. (2019). The Lancaster Sensorimotor Norms: Multidimensional measures of perceptual and action strength for 40,000 English words. &lt;em&gt;Behavior Research Methods, 52&lt;/em&gt;, 1271–1291. https://doi.org/10.3758/s13428-019-01316-z.
 
+Pexman, P. M., Heard, A., Lloyd, E., &amp; Yap, M. J. (2017). The Calgary semantic decision project: Concrete/abstract decision data for 10,000 English words. &lt;em&gt;Behavior Research Methods, 49&lt;/em&gt;(2), 407–417. https://doi.org/10.3758/s13428-016-0720-6
+
 ---
 
 ### References (3/3)
 
-Pexman, P. M., Heard, A., Lloyd, E., &amp; Yap, M. J. (2017). The Calgary semantic decision project: Concrete/abstract decision data for 10,000 English words. &lt;em&gt;Behavior Research Methods, 49&lt;/em&gt;(2), 407–417. https://doi.org/10.3758/s13428-016-0720-6
-
 Pexman, P. M., &amp; Yap, M. J. (2018). Individual differences in semantic processing: Insights from the Calgary semantic decision project. &lt;em&gt;Journal of Experimental Psychology: Learning, Memory, and Cognition, 44&lt;/em&gt;(7), 1091–1112. 
 https://doi.org/10.1037/xlm0000499
+
+Tulving, E. (2007). Are There 256 Different Kinds of Memory? In J. S. Nairne (Ed.), &lt;em&gt;The foundations of remembering: Essays in honor of Henry L. Roediger, III&lt;/em&gt; (p. 39–52). Psychology Press.
 
 Wingfield, C., &amp; Connell, L. (2019). &lt;em&gt;Understanding the role of linguistic distributional knowledge in cognition&lt;/em&gt;. PsyArXiv. https://doi.org/10.31234/osf.io/hpm4z
 
